--- a/checkout.html
+++ b/checkout.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -279,9 +279,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="js/data.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/checkout.js"></script>
+    <script src="data.js"></script>
+    <script src="cart.js"></script>
+    <script src="checkout.js"></script>
 </body>
 
 </html>
