--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="js/data.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/main.js"></script>
+    <script src="data.js"></script>
+    <script src="cart.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
