make it responsive and fix other thing

--- a/products.html
+++ b/products.html
@@ -43,9 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="products.html">المنتجات</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="index.html#categories">التصنيفات</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="index.html#contact">اتصل بنا</a>
                         </li>
