--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="products.html">المنتجات</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#categories">التصنيفات</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">اتصل بنا</a>
                         </li>
@@ -55,7 +55,7 @@
                         <div class="position-relative me-3">
                             <input type="text" class="form-control search-input" placeholder="البحث عن المنتجات..."
                                 id="searchInput">
-                            <button class="btn btn-outline-light btn-search" type="button">
+                            <button class="btn btn-outline-darck btn-search" type="button">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="hero-slide bg-gradient-success">
+                    <div class="hero-slide bg-gradient-primary">
                         <div class="container">
                             <div class="row align-items-center">
                                 <div class="col-lg-6">
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="hero-slide bg-gradient-info">
+                    <div class="hero-slide bg-gradient-primary">
                         <div class="container">
                             <div class="row align-items-center">
                                 <div class="col-lg-6">
