add terms-of-use and privacy-policy and contact page

--- a/checkout.html
+++ b/checkout.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="index.html#categories">التصنيفات</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#contact">اتصل بنا</a>
+                            <a class="nav-link" href="contact.html">اتصل بنا</a>
                         </li>
                     </ul>
 
@@ -106,21 +106,46 @@
 
                                 <div class="mb-3">
                                     <label for="email" class="form-label">البريد الإلكتروني *</label>
-                                    <input type="email" class="form-control" id="email" placeholder="example@email.com" required>
+                                    <input type="email" class="form-control" id="email" placeholder="example@email.com"
+                                        required>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="city" class="form-label">المدينة *</label>
                                     <select class="form-select" id="city" required>
                                         <option value="">اختر المدينة</option>
-                                        <option value="riyadh">الرياض</option>
-                                        <option value="jeddah">جدة</option>
-                                        <option value="dammam">الدمام</option>
-                                        <option value="mecca">مكة المكرمة</option>
-                                        <option value="medina">المدينة المنورة</option>
-                                        <option value="taif">الطائف</option>
-                                        <option value="khobar">الخبر</option>
-                                        <option value="other">أخرى</option>
+                                        <option value="casablanca">الدار البيضاء</option>
+                                        <option value="rabat">الرباط</option>
+                                        <option value="marrakech">مراكش</option>
+                                        <option value="fes">فاس</option>
+                                        <option value="meknes">مكناس</option>
+                                        <option value="tangier">طنجة</option>
+                                        <option value="agadir">أكادير</option>
+                                        <option value="oujda">وجدة</option>
+                                        <option value="kenitra">القنيطرة</option>
+                                        <option value="tetouan">تطوان</option>
+                                        <option value="safi">آسفي</option>
+                                        <option value="eljadida">الجديدة</option>
+                                        <option value="nador">الناظور</option>
+                                        <option value="khouribga">خريبكة</option>
+                                        <option value="beni_mellal">بني ملال</option>
+                                        <option value="taourirt">تاوريرت</option>
+                                        <option value="larache">العرائش</option>
+                                        <option value="khemisset">الخميسات</option>
+                                        <option value="berkane">بركان</option>
+                                        <option value="khenifra">خنيفرة</option>
+                                        <option value="guelmim">كلميم</option>
+                                        <option value="settat">سطات</option>
+                                        <option value="taza">تازة</option>
+                                        <option value="errachidia">الرشيدية</option>
+                                        <option value="laayoune">العيون</option>
+                                        <option value="dakhla">الداخلة</option>
+                                        <option value="taroudant">تارودانت</option>
+                                        <option value="azrou">أزرو</option>
+                                        <option value="ifrane">إفران</option>
+                                        <option value="sidi_ifni">سيدي إفني</option>
+                                        <option value="zagora">زاكورة</option>
+
                                     </select>
                                 </div>
 
@@ -177,7 +202,7 @@
 
                             <div class="d-flex justify-content-between mb-2">
                                 <span>المجموع الفرعي:</span>
-                                <span id="subtotal">0 ريال</span>
+                                <span id="subtotal">0</span>
                             </div>
 
                             <div class="d-flex justify-content-between mb-2">
@@ -189,7 +214,7 @@
 
                             <div class="d-flex justify-content-between fw-bold fs-5">
                                 <span>المجموع الكلي:</span>
-                                <span id="totalAmount">0 ريال</span>
+                                <span id="totalAmount">0 درهم</span>
                             </div>
 
                             <button class="btn btn-primary w-100 mt-3" id="confirmOrder">
@@ -216,8 +241,8 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white-50">الرئيسية</a></li>
                         <li><a href="products.html" class="text-white-50">المنتجات</a></li>
-                        <li><a href="#" class="text-white-50">سياسة الخصوصية</a></li>
-                        <li><a href="#" class="text-white-50">شروط الاستخدام</a></li>
+                        <li><a href="privacy-policy.html" class="text-white-50">سياسة الخصوصية</a></li>
+                        <li><a href="terms-of-use.html" class="text-white-50">شروط الاستخدام</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4" id="contact">
@@ -279,9 +304,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="data.js"></script>
-    <script src="cart.js"></script>
-    <script src="checkout.js"></script>
+    <script src="JS/data.js"></script>
+    <script src="JS/cart.js"></script>
+    <script src="JS/checkout.js"></script>
 </body>
 
 </html>
