--- a/products.html
+++ b/products.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="index.html#categories">التصنيفات</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#contact">اتصل بنا</a>
+                            <a class="nav-link" href="contact.html">اتصل بنا</a>
                         </li>
                     </ul>
 
@@ -55,7 +55,7 @@
                         <div class="position-relative me-3">
                             <input type="text" class="form-control search-input" placeholder="البحث عن المنتجات..."
                                 id="searchInput">
-                            <button class="btn btn-outline-light btn-search" type="button">
+                            <button class="btn btn-outline-darck btn-search" type="button">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
@@ -201,8 +201,8 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white-50">الرئيسية</a></li>
                         <li><a href="products.html" class="text-white-50">المنتجات</a></li>
-                        <li><a href="#" class="text-white-50">سياسة الخصوصية</a></li>
-                        <li><a href="#" class="text-white-50">شروط الاستخدام</a></li>
+                        <li><a href="privacy-policy.html" class="text-white-50">سياسة الخصوصية</a></li>
+                        <li><a href="terms-of-use.html" class="text-white-50">شروط الاستخدام</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4" id="contact">
@@ -234,7 +234,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
-                    <a href="checkout.html" class="btn btn-primary">إتمام الطلب</a>
+                    <button id="checkoutBtn" class="btn btn-primary">إتمام الطلب</button>
                 </div>
             </div>
         </div>
@@ -244,9 +244,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="data.js"></script>
-    <script src="cart.js"></script>
-    <script src="products.js"></script>
+    <script src="JS/data.js"></script>
+    <script src="JS/cart.js"></script>
+    <script src="JS/products.js"></script>
 </body>
 
 </html>
