--- a/checkout.html
+++ b/checkout.html
@@ -54,8 +54,7 @@
                     <div class="d-flex align-items-center">
                         <button class="btn btn-outline-light position-relative" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count badge bg-warning text-dark position-absolute"
-                                id="cartCount">0</span>
+                            <span class="cart-count badge bg-warning text-dark position-absolute" id="cartCount">0</span>
                         </button>
                     </div>
                 </div>
@@ -301,12 +300,12 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="JS/data.js"></script>
-    <script src="JS/cart.js"></script>
-    <script src="JS/checkout.js"></script>
+    <script defer src="JS/data.js"></script>
+    <script defer src="JS/cart.js"></script>
+    <script defer src="JS/checkout.js"></script>
 </body>
 
 </html>
