--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,9 @@
 
                     <div class="d-flex align-items-center">
                         <div class="position-relative me-3">
-                            <input type="text" class="form-control search-input" placeholder="البحث عن المنتجات..." id="searchInput">
-                            <button class="btn btn-outline-darck btn-search" type="button">
+                            <input type="text" class="form-control search-input" placeholder="البحث عن المنتجات..."
+                                id="searchInput">
+                            <button class="btn btn-outline-dark btn-search" type="button">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
@@ -100,7 +101,7 @@
                                         <i class="fas fa-map-marker-alt text-primary me-3 fa-lg"></i>
                                         <h6 class="mb-0">العنوان</h6>
                                     </div>
-                                    <p class="text-muted ms-4">الدار البيضاء، المملكة المغربية<br>حي الملك فهد، شارع
+                                    <p class="text-muted ms-4">الرياض، المملكة العربية السعودية<br>حي الملك فهد، شارع
                                         الملك عبدالعزيز</p>
                                 </div>
 
@@ -110,8 +111,9 @@
                                         <h6 class="mb-0">الهاتف</h6>
                                     </div>
                                     <p class="text-muted ms-4">
-                                        <a href="tel:+966501234567" class="text-decoration-none">+212 612 345678</a><br>
-                                        <a href="tel:+966112345678" class="text-decoration-none">+212 612 345678</a>
+                                        <a href="tel:+966501234567" class="text-decoration-none">+966 50 123
+                                            4567</a><br>
+                                        <a href="tel:+966112345678" class="text-decoration-none">+966 11 234 5678</a>
                                     </p>
                                 </div>
 
@@ -135,7 +137,7 @@
                                     </div>
                                     <p class="text-muted ms-4">
                                         السبت - الخميس: 9:00 ص - 10:00 م<br>
-                                        الجمعة: 3:00 م - 10:00 م
+                                        الجمعة: 2:00 م - 10:00 م
                                     </p>
                                 </div>
                             </div>
@@ -291,7 +293,7 @@
                             </h2>
                             <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    نعم، يمكنك إرجاع أو استبدال المنتج خلال 14 يوم من تاريخ الاستلام، بشرط أن يكون
+                                    نعم، يمكنك إرجاع أو استبدال المنتج خلال 7 أيام من تاريخ الاستلام، بشرط أن يكون
                                     المنتج في حالته الأصلية وغير مستخدم.
                                 </div>
                             </div>
@@ -306,7 +308,7 @@
                             </h2>
                             <div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    نعم، التوصيل مجاني لجميع الطلبات داخل المملكة العربية السعودية بدون حد أدنى للطلب.
+                                    نعم، التوصيل مجاني لجميع الطلبات داخل المملكة المغربية بدون حد أدنى للطلب.
                                 </div>
                             </div>
                         </div>
@@ -511,12 +513,15 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- SweetAlert -->
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Custom JS -->
-    <script src="JS/data.js"></script>
-    <script src="JS/cart.js"></script>
-    <script src="JS/contact.js"></script>
+    <script defer src="JS/data.js"></script>
+    <script defer src="JS/cart.js"></script>
+    <script defer src="JS/contact.js"></script>
 </body>
 
 </html>
