--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -60,8 +60,7 @@
                         </div>
                         <button class="btn btn-outline-light position-relative" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count badge bg-warning text-dark position-absolute"
-                                id="cartCount">0</span>
+                            <span class="cart-count badge bg-warning text-dark position-absolute" id="cartCount">0</span>
                         </button>
                     </div>
                 </div>
@@ -217,15 +216,14 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white-50">الرئيسية</a></li>
                         <li><a href="products.html" class="text-white-50">المنتجات</a></li>
-                        <li><a href="contact.html" class="text-white-50">اتصل بنا</a></li>
                         <li><a href="privacy-policy.html" class="text-white-50">سياسة الخصوصية</a></li>
                         <li><a href="terms-of-use.html" class="text-white-50">شروط الاستخدام</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" id="contact">
                     <h5 class="fw-bold mb-3">اتصل بنا</h5>
-                    <p><i class="fas fa-phone me-2"></i> +966 50 123 4567</p>
-                    <p><i class="fas fa-envelope me-2"></i> info@store.com</p>
+                    <p><i class="fas fa-phone me-2"></i> +212666666666</p>
+                    <p><i class="fas fa-envelope me-2"></i> our@store.com</p>
                     <p><i class="fas fa-map-marker-alt me-2"></i>الدار البيضاء، المملكة المغربية</p>
                 </div>
             </div>
@@ -258,11 +256,14 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- SweetAlert -->
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Custom JS -->
-    <script src="js/data.js"></script>
-    <script src="js/cart.js"></script>
+    <script defer src="js/data.js"></script>
+    <script defer src="js/cart.js"></script>
     <script defer src="JS/privacy-terms.js"></script>
 </body>
 
