--- a/product-details.html
+++ b/product-details.html
@@ -61,8 +61,7 @@
                         </div>
                         <button class="btn btn-outline-light position-relative" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count badge bg-warning text-dark position-absolute"
-                                id="cartCount">0</span>
+                            <span class="cart-count badge bg-warning text-dark position-absolute" id="cartCount">0</span>
                         </button>
                     </div>
                 </div>
@@ -154,12 +153,15 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- SweetAlert -->
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Custom JS -->
-    <script src="JS/data.js"></script>
-    <script src="JS/cart.js"></script>
-    <script src="JS/product-details.js"></script>
+    <script defer src="JS/data.js"></script>
+    <script defer src="JS/cart.js"></script>
+    <script defer src="JS/product-details.js"></script>
 </body>
 
 </html>
