--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -55,14 +55,13 @@
                         <div class="position-relative me-3">
                             <input type="text" class="form-control search-input" placeholder="البحث عن المنتجات..."
                                 id="searchInput">
-                            <button class="btn btn-outline-darck btn-search" type="button">
+                            <button class="btn btn-outline-dark btn-search" type="button">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
                         <button class="btn btn-outline-light position-relative" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count badge bg-warning text-dark position-absolute"
-                                id="cartCount">0</span>
+                            <span class="cart-count badge bg-warning text-dark position-absolute" id="cartCount">0</span>
                         </button>
                     </div>
                 </div>
@@ -250,15 +249,14 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white-50">الرئيسية</a></li>
                         <li><a href="products.html" class="text-white-50">المنتجات</a></li>
-                        <li><a href="contact.html" class="text-white-50">اتصل بنا</a></li>
                         <li><a href="privacy-policy.html" class="text-white-50">سياسة الخصوصية</a></li>
                         <li><a href="terms-of-use.html" class="text-white-50">شروط الاستخدام</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" id="contact">
                     <h5 class="fw-bold mb-3">اتصل بنا</h5>
-                    <p><i class="fas fa-phone me-2"></i> +966 50 123 4567</p>
-                    <p><i class="fas fa-envelope me-2"></i> info@store.com</p>
+                    <p><i class="fas fa-phone me-2"></i> +212666666666</p>
+                    <p><i class="fas fa-envelope me-2"></i> our@store.com</p>
                     <p><i class="fas fa-map-marker-alt me-2"></i>الدار البيضاء، المملكة المغربية</p>
                 </div>
             </div>
@@ -291,7 +289,10 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- SweetAlert -->
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Custom JS -->
     <script defer src="JS/data.js"></script>
