--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -7,10 +7,10 @@
     <title>شروط الاستخدام - المتجر الإلكتروني</title>
 
     <!-- Bootstrap 5 RTL -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 
     <!-- Google Fonts -->
     <link
@@ -120,12 +120,12 @@
                                     </h3>
                                     <div class="alert alert-info mb-3">
                                         <i class="fas fa-info-circle me-2"></i>
-                                        <strong>مهم:</strong> جميع الطلبات يتم تأكيدها عبر البريد الإلكتروني.
+                                        <strong>مهم:</strong> جميع الطلبات يتم تأكيدها عبر البريد الإلكتروني أو مكالة هاتفية.
                                     </div>
                                     <ul class="list-unstyled">
                                         <li class="mb-2">
                                             <i class="fas fa-money-bill-wave text-success me-2"></i>
-                                            الدفع يتم فقط عند التسليم.
+                                            الدفع يتم عند التسليم, أو يمكنك الدفع بسهولة عن طريق PayPal.
                                         </li>
                                         <li class="mb-2">
                                             <i class="fas fa-times-circle text-warning me-2"></i>
@@ -175,6 +175,9 @@
                                     <div class="alert alert-danger">
                                         <i class="fas fa-exclamation-triangle me-2"></i>
                                         <strong>تنبيه:</strong> لا تُقبل المنتجات المتضررة أو المستخدمة.
+                                        <br>
+                                        <i class="fas fa-warning me-2"></i>
+                                        <strong>تنبيه:</strong> لا تُقبل المنتجات الرقمية نهائيا.
                                     </div>
                                 </div>
 
