--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,7 @@
     <title>إتمام الطلب - المتجر الإلكتروني</title>
 
     <!-- Bootstrap 5 RTL -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- PayPal -->
-    <script
+    <script defer
         src="https://www.paypal.com/sdk/js?client-id=AfeyzZmy4zvSj3PrLqUaaIvDYjAfKRb_oQ26nTgGRrAVd4tZbNqgkyrU4gYrftm813U7if03GcFmxkYl&currency=USD"></script>
 
 </head>
@@ -64,7 +64,7 @@
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
-                        <button class="btn btn-outline-light position-relative" id="cartBtn">
+                        <button class="btn btn-outline-light position-relative me-3" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="cart-count badge bg-warning text-dark position-absolute"
                                 id="cartCount">0</span>
