--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
     <title>المنتجات - المتجر الإلكتروني</title>
 
     <!-- Bootstrap 5 RTL -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
@@ -59,7 +59,7 @@
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
-                        <button class="btn btn-outline-light position-relative" id="cartBtn">
+                        <button class="btn btn-outline-light position-relative me-3" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="cart-count badge bg-warning text-dark position-absolute" id="cartCount">0</span>
                         </button>
@@ -159,7 +159,7 @@
                         </div>
                         <div class="d-flex align-items-center">
                             <label class="me-2">ترتيب حسب:</label>
-                            <select class="form-select" id="sortSelect" style="width: auto;">
+                            <select class="form-select" id="sortSelect">
                                 <option value="default">الافتراضي</option>
                                 <option value="price-low">السعر: من الأقل للأعلى</option>
                                 <option value="price-high">السعر: من الأعلى للأقل</option>
@@ -242,7 +242,7 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- SweetAlert -->
     <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
