--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Google Fonts -->
     <link
@@ -22,11 +22,7 @@
 
     <!-- Email.js -->
     <!-- EmailJS SDK v4 -->
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-
-    <!-- PayPal -->
-    <!-- <script defer
-        src="https://www.paypal.com/sdk/js?client-id=AfeyzZmy4zvSj3PrLqUaaIvDYjAfKRb_oQ26nTgGRrAVd4tZbNqgkyrU4gYrftm813U7if03GcFmxkYl&currency=USD"></script> -->
+    <script defer src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
 </head>
 
@@ -189,11 +185,10 @@
                         </div>
                         <div id="wayToPay" class="card-body">
                             <div class="mb-3 d-flex justify-content-around w-100">
-                                <!-- <button id="paypalPay" onclick="paypalPaying()" type="button"
-                                    class="btn btn-outline-success"><i class="fa-brands fa-paypal"></i> PayPal</button> -->
+                                <button id="paypalPay" type="button" class="btn btn-outline-success"><i
+                                        class="fa-brands fa-paypal"></i> بايبال</button>
                                 <button id="cashPay" type="button" class="btn btn-outline-success"><i
-                                        class="fas fa-money-bill-wave"></i>
-                                    نقداً</button>
+                                        class="fas fa-money-bill-wave"></i>نقداً</button>
                             </div>
                             <div id="alertInfo" class="alert alert-info">
                             </div>
@@ -240,7 +235,7 @@
                                 <span id="totalAmount">0 درهم</span>
                             </div>
 
-                            <button class="btn btn-primary w-100 mt-3" id="confirmOrder">
+                            <button class="btn btn-primary w-100 mt-3" type="button" id="confirmOrder">
                                 <i class="fas fa-check me-2"></i>
                                 تأكيد الطلب
                             </button>
@@ -325,8 +320,8 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS -->
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- PayPal -->
+<script src="https://www.paypal.com/sdk/js?client-id=AfeyzZmy4zvSj3PrLqUaaIvDYjAfKRb_oQ26nTgGRrAVd4tZbNqgkyrU4gYrftm813U7if03GcFmxkYl&currency=USD&locale=ar_MA"></script>
 
     <!-- Custom JS -->
     <script defer src="JS/data.js"></script>
